# media-tracker

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  main.py  requirements.txt  run.py  run.sh  setup_env.sh
Sheet/: anime_list.ods
qml/: EditDialog.qml  MediaCard.qml  MediaGrid.qml  MediaTable.qml  SettingsDialog.qml  Theme.js  Theme.qml  Toast.qml  main.qml
src/: bridge.rs  list_models.rs  main.py  main.rs
src/api/: anilist.rs  anilist_client.py  mod.rs  tmdb.rs  tmdb_client.py
src/config/: manager.rs
src/database/: db_manager.py  models.py
src/db/: connection.rs  mod.rs  queries.rs
src/images/: cache.rs
src/models/: media_item.rs  mod.rs
src/ui/: main_window.py  media_table.py  settings_dialog.py
src/ui/dialogs/: edit_dialog.py  import_dialog.py  manual_match_dialog.py  quality_types_dialog.py
src/utils/: config_manager.py  image_loader.py  import_service.py  offline_anime_matcher.py
